cursive-bootstrap/tests/ui/E-CON/E-CON-0140.cursive
// RUN: compile-fail
// DIAG: E-CON-0140
// SPEC: 8.9
// DESC: Dispatch outside parallel block

procedure bad_dispatch() -> () {
    dispatch 0..10 |i| {  //~ ERROR E-CON-0140: dispatch outside parallel
        let x: i32 = i
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
